sync local changes